--- a/package.json
+++ b/package.json
@@ -43,12 +43,15 @@
 		"@tanstack/react-query": "^5.90.20",
 		"@tanstack/react-table": "^8.21.3",
 		"@types/bcryptjs": "^3.0.0",
+		"@types/dompurify": "^3.2.0",
 		"@urql/core": "^6.0.1",
 		"apollo-server-micro": "^3.13.0",
 		"axios": "^1.13.4",
 		"bcryptjs": "^3.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"dompurify": "^3.3.1",
 		"graphql": "^16.12.0",
 		"graphql-request": "^7.4.0",
 		"graphql-tag": "^2.12.6",
